# negative-converter

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  skills-lock.json
.claude/: settings.json  ship.local.json  skills-lock.json
.claude/hooks/: clippy-gate.sh  rustfmt-on-edit.sh
.claude/skills/: perf-telemetry  pr-comments
.github/workflows/: ci.yml  codex-review.yml
benches/: kernels.rs
docs/: TASKS.md  design-spec.html  design-spec.md  hdr-output-spike.md  negative-convertor-research-report.md  progress.md  telemetry-strategy.md  white-balance.md
docs/prototypes/: perf-bench-instrumentation.md
docs/reports/: real-scan-verification.md  v0-baseline.md
docs/tasks/: algo-density.md  algo-interface.md  algo-sigmoid.md  algo-simple.md  auto-base-neutral-stock.md  auto-base-redesign.md  auto-neutral-wb.md  base-acquisition-planner.md  bw-support.md  cli-framework.md  color-characterization-calibration.md  color-management.md  conversion-analysis-tooling.md  conversion-versioning.md  dense-base-dmax-plausibility.md  density-safety-bounds.md  dependency-hygiene.md  display-output-acceptance.md  display-p3-output.md  dmax-reference.md  dmax-white-anchor.md  estimate-reuse-output.md  film-base-content-fallback.md  film-base-estimation.md  film-master-render-pipeline.md  film-rgb-working-space.md  gain-map-hdr-output.md  grid-verdict-enum.md  hdr-avif-output.md  hdr-display-rendering.md  hdr-output-spike.md  input-color-management.md  input-data-semantics.md  memory-preflight.md  (+28 more)
src/: cli.rs  lib.rs  main.rs  telemetry.rs  types.rs
tests/: pipeline.rs
(+37 files in other folders)
