[package]
name = "nc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
image = "0.25.10"
kamadak-exif = "0.6.1"
lcms2 = "6.1.1"
lcms2-sys = "4.0.7"
palette = "0.7.6"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tiff = "0.11.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "kernels"
harness = false
